css adjustment to button3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <br>
     <div>
-      <p id="demo02" style="display:none">Not sure what this is, but it isn't nothing.</p>
+      <p id="demo02" style="display:none">Not sure what that was, but it wasn't nothing.</p>
       <button class="two" onclick="document.getElementById('demo02').style.display='block'">NowPressMe</button>
     </div>
     <br>
