add quote still needs styling

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <p id="demo03" style="display:none">(Isn't this cool {$name})</p>
       <button class="three" onclick="document.getElementById('demo03').style.display='block'">AndMe</button>
     </div>
+    <div>
+      <img class="quote" src="images/quote.png" alt="">
+    </div>
 
     <script src="main.js"></script>
   </body>
