moved document links to bottom of page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   <body>
     <div class="nav">
       <img class="logo" src="https://i.postimg.cc/FF0qjJnn/Wordmark.png" alt="Seth Allen Design">
-      <ul>
-        <li>HyperText</li>
-        <li>Stylesheet</li>
-        <li>JavaScript</li>
-      </ul>
     </div>
     <div>
       <button class="one">PressMe</button>
@@ -34,7 +29,14 @@
     <div>
       <img class="quote" src="images/quote.png" alt="">
     </div>
-
+    <br>
+    <div class="">
+      <ul>
+        <li>HyperText</li>
+        <li>Stylesheet</li>
+        <li>JavaScript</li>
+      </ul>
+    </div>
 
     <script src="main.js"></script>
   </body>
