add links to footer nav

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <img class="quote" src="images/quote.png" alt="">
     </div>
     <br>
-    <div class="">
+    <div>
       <ul>
-        <li>HyperText</li>
-        <li>Stylesheet</li>
-        <li>JavaScript</li>
+        <li><a class="footer" href="https://github.com/knldg27/JavaScript02/blob/master/index.html" target="_blank">HyperText</a></li>
+        <li><a class="footer" href="https://github.com/knldg27/JavaScript02/blob/master/style.css" target="_blank">Stylesheet</a></li>
+        <li><a class="footer" href="https://github.com/knldg27/JavaScript02/blob/master/main.js" target="_blank">JavaScript</a></li>
       </ul>
     </div>
 
