--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
   <body>
     <div class="nav">
       <img class="logo" src="https://i.postimg.cc/FF0qjJnn/Wordmark.png" alt="Seth Allen Design">
+      <form id="searchbar">
+        <label for="search">Search:</label>
+        <input type="search" id="search" name="search">
+        <input type="submit" name="submit" value="Go!">
+      </form>
     </div>
+  <div>
     <div>
-      <button class="one">PressMe</button>
+      <button class="one">Press Me</button>
     </div>
     <br>
     <div>
       <p id="demo02" style="display:none">Not sure what that was, but it wasn't nothing.</p>
-      <button class="two" onclick="document.getElementById('demo02').style.display='block'">NowPressMe</button>
+      <button class="two" onclick="document.getElementById('demo02').style.display='block'">Now Press Me</button>
     </div>
     <br>
     <div>
@@ -24,17 +30,32 @@
     </div>
     <br>
     <div>
-      <button class="four" onclick="visitPage();">MoreInformation</button>
-    </div>
-    <div>
-      <img class="quote" src="images/quote.png" alt="">
+      <button class="four" onclick="visitPage();">More Information</button>
     </div>
     <br>
     <div>
+      <a href="#last-paragraph"><button class="one">Page Bottom</button></a>
+    </div>
+    <div class="gradient-block"></div>
+  </div>
+    <div class="text-holder">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+      <div class="squares" id="first-square"></div>
+      <div class="squares" id="second-square"></div>
+    <div class="text-holder" id="last-paragraph">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div>
+      <div class="center"></div>
+    </div>
+    <br>
+    <div class="div-footer">
       <ul>
         <li><a class="footer" href="https://github.com/knldg27/JavaScript02/blob/master/index.html" target="_blank">HyperText</a></li>
         <li><a class="footer" href="https://github.com/knldg27/JavaScript02/blob/master/style.css" target="_blank">Stylesheet</a></li>
         <li><a class="footer" href="https://github.com/knldg27/JavaScript02/blob/master/main.js" target="_blank">JavaScript</a></li>
+        <li style="color: white;">Postion Fixed</li>
       </ul>
     </div>
 
